01.fixed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sboot
  name: sboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sboot
  template:
    metadata:
      labels:
        app: sboot
    spec:
      containers:
      - name: sboot
        image: quay.io/naveenkendyala/sboot-hello:v1
        ports:
          - containerPort: 8080
