01.fixed/02.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: myapp
